fix modal scroll layout problem

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,12 @@ nav{
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+/*table*/
+.table{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 /*profile-navigation*/
 .profile-nav{
   -webkit-box-sizing: border-box;
@@ -191,7 +197,7 @@ main{
 /*modal*/
 .modal-container{
   z-index: 99;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -271,7 +277,7 @@ main{
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  height: 70%;
+  height: 62%;
   padding-left: 10%;
   padding-right: 10%;
   margin: 0 auto;
